# webs

./: README.md  a.py  b.py  c.py  d.py  e.py  f.py  g.py  h.py  j.py  x.py  z.py
docs/: README.md  (+2 more)
webs-server/: .env.example  Cargo.toml  README.md  build.rs  docker-compose.yml
webs-server/crates/webs-analytics/: Cargo.toml
webs-server/crates/webs-app/: Cargo.toml
webs-server/crates/webs-auth/: Cargo.toml
webs-server/crates/webs-cache/: Cargo.toml
webs-server/crates/webs-common/: Cargo.toml
webs-server/crates/webs-config/: Cargo.toml
webs-server/crates/webs-database/: Cargo.toml
webs-server/crates/webs-events/: Cargo.toml
webs-server/crates/webs-feed/: Cargo.toml
webs-server/crates/webs-identity/: Cargo.toml
webs-server/crates/webs-media/: Cargo.toml
webs-server/crates/webs-messaging/: Cargo.toml
webs-server/crates/webs-moderation/: Cargo.toml
webs-server/crates/webs-notifications/: Cargo.toml
webs-server/crates/webs-observability/: Cargo.toml
webs-server/crates/webs-proto/: Cargo.toml
webs-server/crates/webs-rate-limiter/: Cargo.toml
webs-server/crates/webs-rtc/: Cargo.toml
webs-server/crates/webs-search/: Cargo.toml
webs-server/docs/: EVENTS.md
webs-server/migrations/: 001_core.surql  001_users.surql  002_identity.surql  002_posts.surql  003_sessions.surql  003_social_graph.surql  003_spins.surql  004_circles.surql  004_feed.surql  004_social_graph.surql  005_messaging.surql  005_search.surql  005_stories.surql  006_media.surql  006_messages.surql  006_rtc.surql  007_activity.surql  007_feed.surql  007_notifications.surql  008_follows.surql  008_rtc.surql  008_spins.surql  009_moderation.surql  009_reactions.surql  009_stories.surql  010_messages.surql
webs-server/proto/: auth.proto  feed.proto  messages.proto  messaging.proto  notification.proto  profile.proto  rtc.proto  search.proto
webs-server/src/: error.rs  main.rs
webs-server/tests/: activity_tests.rs  auth_tests.rs  feed_tests.rs  post_tests.rs  profile_tests.rs
(+462 files in other folders)
