[package]
name    = "webs-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webs-server"
path = "src/main.rs"

[dependencies]
# async runtime
tokio       = { version = "1", features = ["full"] }

# gRPC
tonic       = "0.11"
prost       = "0.12"

# database
surrealdb   = "2"

# serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# auth
jsonwebtoken = "9"
bcrypt       = "0.15"

# config & env
dotenvy     = "0.15"
config      = "0.14"

# logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# error handling
thiserror   = "1"
anyhow      = "1"

# utilities
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.11"
