[workspace]
resolver = "2"
members = [
    "crates/webs-app", "crates/webs-common", "crates/webs-config",
    "crates/webs-observability", "crates/webs-database", "crates/webs-identity",
    "crates/webs-auth", "crates/webs-social-graph", "crates/webs-feed",
    "crates/webs-search", "crates/webs-messaging", "crates/webs-media",
    "crates/webs-notifications", "crates/webs-rtc", "crates/webs-trust",
    "crates/webs-moderation", "crates/webs-analytics", "crates/webs-rate-limiter",
    "crates/webs-events", "crates/webs-proto",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
surrealdb = { version = "2", features = ["protocol-ws", "rustls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
redis = { version = "0.27", features = ["tokio-comp"] }
iggy = "0.6"
